// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button using Theme Font Family should return a Button object with a custom font family 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: transparent;
  color: inherit;
  font-family: "DejaVu Sans Mono","Bitstream Vera Sans Mono",Courier;
  font-size: inherit;
  font-weight: inherit;
  display: inline-block;
  max-width: 100%;
  vertical-align: top;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  position: relative;
  margin: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  text-transform: uppercase;
}

.c0:hover {
  cursor: pointer;
  background-color: hsl(0,0%,90%);
}

.c0:active {
  background-color: hsl(0,0%,100%);
}

.c0[disabled] {
  opacity: 0.4;
  pointer-events: none;
  cursor: not-allowed;
}

.c0 > div {
  border-radius: 4px;
  display: inline-block;
  max-width: 100%;
  vertical-align: top;
}

<button
  className="c0"
  type="button"
>
  <div>
    Lorem Ipsum
  </div>
</button>
`;

exports[`Button using Theme color should return a Button object with custom color 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: hsl(305,33.9%,23.7%);
  color: hsl(313,67.8%,47.5%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  font-weight: inherit;
  display: inline-block;
  max-width: 100%;
  vertical-align: top;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  position: relative;
  margin: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  text-transform: uppercase;
}

.c0:hover {
  cursor: pointer;
  background-color: hsl(0,0%,90%);
}

.c0:active {
  background-color: hsl(0,0%,100%);
}

.c0[disabled] {
  opacity: 0.4;
  pointer-events: none;
  cursor: not-allowed;
}

.c0 > div {
  border-radius: 4px;
  display: inline-block;
  max-width: 100%;
  vertical-align: top;
}

<button
  className="c0"
  type="button"
>
  <div>
    Lorem Ipsum
  </div>
</button>
`;

exports[`Button using theme border radius Button should return a Button with lg border radius styling based on theme.border.borderRadius 1`] = `
.c0 {
  border: 0;
  border-radius: 12px;
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.2rem;
  font-weight: inherit;
  display: inline-block;
  max-width: 100%;
  vertical-align: top;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  position: relative;
  margin: 4px;
  padding-bottom: 8px;
  padding-left: 4px;
  padding-right: 4px;
  padding-top: 8px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  text-transform: uppercase;
}

.c0:hover {
  cursor: pointer;
  background-color: hsl(0,0%,90%);
}

.c0:active {
  background-color: hsl(0,0%,100%);
}

.c0[disabled] {
  opacity: 0.4;
  pointer-events: none;
  cursor: not-allowed;
}

.c0 > div {
  border-radius: 12px;
  display: inline-block;
  max-width: 100%;
  vertical-align: top;
}

<button
  className="c0"
  type="button"
>
  <div>
    Custom lg button
  </div>
</button>
`;

exports[`Button using variant styles Button set to an unknown variant should return a Button with no variant styling 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  font-weight: inherit;
  display: inline-block;
  max-width: 100%;
  vertical-align: top;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  position: relative;
  margin: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  text-transform: uppercase;
}

.c0:hover {
  cursor: pointer;
}

.c0[disabled] {
  opacity: 0.4;
  pointer-events: none;
  cursor: not-allowed;
}

.c0 > div {
  border-radius: 4px;
  display: inline-block;
  max-width: 100%;
  vertical-align: top;
}

<button
  className="c0"
  type="button"
>
  <div>
    Do this
  </div>
</button>
`;

exports[`Button using variant styles Button set with no variant should return a Button with bg and color styling preserved 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: hsl(53.9,100%,61.6%);
  color: hsl(53.9,100%,41.6%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  font-weight: inherit;
  display: inline-block;
  max-width: 100%;
  vertical-align: top;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  position: relative;
  margin: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  text-transform: uppercase;
}

.c0:hover {
  cursor: pointer;
  background-color: hsl(0,0%,90%);
}

.c0:active {
  background-color: hsl(0,0%,100%);
}

.c0[disabled] {
  opacity: 0.4;
  pointer-events: none;
  cursor: not-allowed;
}

.c0 > div {
  border-radius: 4px;
  display: inline-block;
  max-width: 100%;
  vertical-align: top;
}

<button
  className="c0"
  type="button"
>
  <div>
    Do this
  </div>
</button>
`;

exports[`Button using variant styles Button set with variant, bg and color should return a Button with bg and color styling overwriting the variant bg and color style 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: hsl(4.1,89.6%,58.4%);
  color: hsl(0,0%,98%);
  background-color: hsl(53.9,100%,61.6%);
  color: hsl(53.9,100%,41.6%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  font-weight: inherit;
  display: inline-block;
  max-width: 100%;
  vertical-align: top;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  position: relative;
  margin: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  text-transform: uppercase;
}

.c0:focus {
  background-color: hsl(4.1,89.6%,68.4%);
}

.c0:hover {
  background-color: hsl(4.1,89.6%,40.4%);
}

.c0:hover {
  cursor: pointer;
}

.c0[disabled] {
  opacity: 0.4;
  pointer-events: none;
  cursor: not-allowed;
}

.c0 > div {
  border-radius: 4px;
  display: inline-block;
  max-width: 100%;
  vertical-align: top;
}

<button
  className="c0"
  type="button"
>
  <div>
    Do this
  </div>
</button>
`;

exports[`Button using variant styles Button with variant set to contained-danger should return a Button with contained-danger styling 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: hsl(4.1,89.6%,58.4%);
  color: hsl(0,0%,98%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  font-weight: inherit;
  display: inline-block;
  max-width: 100%;
  vertical-align: top;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  position: relative;
  margin: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  text-transform: uppercase;
}

.c0:focus {
  background-color: hsl(4.1,89.6%,68.4%);
}

.c0:hover {
  background-color: hsl(4.1,89.6%,40.4%);
}

.c0:hover {
  cursor: pointer;
}

.c0[disabled] {
  opacity: 0.4;
  pointer-events: none;
  cursor: not-allowed;
}

.c0 > div {
  border-radius: 4px;
  display: inline-block;
  max-width: 100%;
  vertical-align: top;
}

<button
  className="c0"
  type="button"
>
  <div>
    Do this
  </div>
</button>
`;

exports[`Button using variant styles Button with variant set to contained-light should return a Button with contained-light styling 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: hsl(0,0%,98%);
  color: hsl(0,0%,25%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  font-weight: inherit;
  display: inline-block;
  max-width: 100%;
  vertical-align: top;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  position: relative;
  margin: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  text-transform: uppercase;
}

.c0:focus {
  background-color: hsl(0,0%,100%);
}

.c0:hover {
  background-color: hsl(0,0%,90%);
}

.c0:hover {
  cursor: pointer;
}

.c0[disabled] {
  opacity: 0.4;
  pointer-events: none;
  cursor: not-allowed;
}

.c0 > div {
  border-radius: 4px;
  display: inline-block;
  max-width: 100%;
  vertical-align: top;
}

<button
  className="c0"
  type="button"
>
  <div>
    Do this
  </div>
</button>
`;

exports[`Button using variant styles Button with variant set to danger should return a Button with danger styling 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: transparent;
  color: hsl(4.1,89.6%,58.4%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  font-weight: inherit;
  display: inline-block;
  max-width: 100%;
  vertical-align: top;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  position: relative;
  margin: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  text-transform: uppercase;
}

.c0:hover {
  cursor: pointer;
}

.c0[disabled] {
  opacity: 0.4;
  pointer-events: none;
  cursor: not-allowed;
}

.c0 > div {
  border-radius: 4px;
  display: inline-block;
  max-width: 100%;
  vertical-align: top;
}

<button
  className="c0"
  type="button"
>
  <div>
    Do this
  </div>
</button>
`;

exports[`Button using variant styles Button with variant set to primary should return a Button with primary styling 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: transparent;
  color: hsl(323.3,84.6%,28%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  font-weight: inherit;
  display: inline-block;
  max-width: 100%;
  vertical-align: top;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  position: relative;
  margin: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  text-transform: uppercase;
}

.c0:hover {
  cursor: pointer;
}

.c0[disabled] {
  opacity: 0.4;
  pointer-events: none;
  cursor: not-allowed;
}

.c0 > div {
  border-radius: 4px;
  display: inline-block;
  max-width: 100%;
  vertical-align: top;
}

<button
  className="c0"
  type="button"
>
  <div>
    Do this
  </div>
</button>
`;

exports[`Button using variant styles with theme colors Button with variant set to contained-primary should return a Button with contained-primary styling based on theme.colors 1`] = `
.c0 {
  border: 0;
  border-radius: 4px;
  background-color: hsl(323.31,85.61%,29.98%);
  color: hsl(0,0%,98%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  font-weight: inherit;
  display: inline-block;
  max-width: 100%;
  vertical-align: top;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  position: relative;
  margin: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  text-transform: uppercase;
}

.c0:focus {
  background-color: hsl(312.81,68.81%,48.51%);
}

.c0:hover {
  background-color: hsl(302.91,34.91%,24.71%);
}

.c0:hover {
  cursor: pointer;
}

.c0[disabled] {
  opacity: 0.4;
  pointer-events: none;
  cursor: not-allowed;
}

.c0 > div {
  border-radius: 4px;
  display: inline-block;
  max-width: 100%;
  vertical-align: top;
}

<button
  className="c0"
  type="button"
>
  <div>
    Do this
  </div>
</button>
`;
